force-app/main/default/objects/Customer__c/fields/Customer_Group_Desc__c.field-meta.xml
<CustomField>
    <fullName>Customer_Group_Desc__c</fullName>
    <label>Customer Group Desc</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>