force-app/main/default/objects/Customer__c/fields/Division__c.field-meta.xml
<CustomField>
    <fullName>Division__c</fullName>
    <label>Division</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>