force-app/main/default/objects/Customer__c/listViews/All_Customers.listView-meta.xml
<ListView>
    <fullName>All_Customers</fullName>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <label>All Customers</label>
</ListView>